--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,61 +1,119 @@
 @import "~muse-ui/dist/muse-ui.css";
 @import '~material-icons/iconfont/material-icons.scss';
-font-face { 
-  font-family: "IranSans";
-  font-style: normal;
-  font-weight: normal;
-  src: url("/fonts/IRANSansWeb(FaNum).woff") format("woff")
+
+font-face {
+    font-family: "IranSans";
+    font-style: normal;
+    font-weight: normal;
+    src: url("/fonts/IRANSansWeb(FaNum).woff") format("woff")
 }
 
 @font-face {
-  font-family: "IranSans-Light";
-  font-style: normal;
-  font-weight: normal;
-  src: url("/fonts/IRANSansWeb(FaNum)_Light.woff") format("woff")
+    font-family: "IranSans-Light";
+    font-style: normal;
+    font-weight: normal;
+    src: url("/fonts/IRANSansWeb(FaNum)_Light.woff") format("woff")
 }
 
 @font-face {
-  font-family: "IranSans-Medium";
-  font-style: normal;
-  font-weight: normal;
-  src: url("/fonts/IRANSansWeb(FaNum)_Medium.woff") format("woff")
+    font-family: "IranSans-Medium";
+    font-style: normal;
+    font-weight: normal;
+    src: url("/fonts/IRANSansWeb(FaNum)_Medium.woff") format("woff")
 }
 
 @font-face {
-  font-family: "IranSans-Bold";
-  font-style: normal;
-  font-weight: normal;
-  src: url("/fonts/IRANSansWeb(FaNum)_Bold.woff") format("woff")
+    font-family: "IranSans-Bold";
+    font-style: normal;
+    font-weight: normal;
+    src: url("/fonts/IRANSansWeb(FaNum)_Bold.woff") format("woff")
 }
 
 @font-face {
-  font-family: "IranSans-Dn";
-  font-style: normal;
-  font-weight: normal;
-  src: url("/fonts/iransansdn.woff2") format("woff2")
+    font-family: "IranSans-Dn";
+    font-style: normal;
+    font-weight: normal;
+    src: url("/fonts/iransansdn.woff2") format("woff2")
 }
-body{
-  background-color: #FAFCFF;
+
+body {
+    background-color: #FAFCFF;
 }
-*{
-  margin : 0;
-  padding : 0;
+
+* {
+    margin: 0;
+    padding: 0;
 }
-.rtl{
-  direction: rtl;
-  font-family: IranSans-Light;
+
+.rtl {
+    direction: rtl;
+    font-family: IranSans-Light;
 }
-.slideDown-enter-active, .slideDown-leave-active {
-  height:auto;
-  max-height:100px;
-  transition:all 0.2s ease-out;
+
+.slideDown-enter-active,
+.slideDown-leave-active {
+    height: auto;
+    max-height: 100px;
+    transition: all 0.2s ease-out;
 }
-.slideDown-group-enter-active, .slideDown-group-leave-active {
-  height:auto;
-  max-height:100px;
-  transition:all 0.2s ease-out;
+
+.slideDown-group-enter-active,
+.slideDown-group-leave-active {
+    height: auto;
+    max-height: 100px;
+    transition: all 0.2s ease-out;
 }
-.maginAuto{
-  margin-left: auto;
-  margin-right: auto
+
+.maginAuto {
+    margin-left: auto;
+    margin-right: auto
+}
+
+.sidebar {
+    background-image: url("/img/3.jpg");
+    height: 100vh;
+    background-position: left;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.container {
+    background-color: #FAFCFF;
+    height: 100vh;
+}
+
+.sidebar {
+    font-family: "IranSans-Light";
+}
+
+.profileSelction {
+    width: 200px;
+    margin: 30px auto;
+    text-align: center;
+    font-family: "IranSans-Light";
+    font-size: 13px;
+}
+
+.profileSelction img {
+    border-radius: 100%;
+    margin: 10px auto;
+    width: 80px;
+    height: 80px;
+}
+
+.sidebar .mu-paper-round {
+    background-color: transparent;
+    box-shadow: unset;
+}
+
+.sidebar .mu-item-title {
+    text-align: right;
+}
+
+.sidebar .mu-item {
+    width: 220px;
+    margin: 0px auto;
+} 
+.sidebar li[active=true] .mu-item-title,.sidebar li[active=true] .mu-item-action{
+  color: #0d47a1;
 }
