--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -114,7 +114,7 @@ body {
     width: 220px;
     margin: 0px auto;
 } 
-.sidebar li[active=true] .mu-item-title,.sidebar li[active=true] .mu-item-action{
+.sidebar a.router-link-active .mu-item-title,.sidebar a.router-link-active .mu-item-action{
   color: #0d47a1;
 }
 .feedPosts .mu-card{
