--- a/public/css/app.css
+++ b/public/css/app.css
@@ -212,16 +212,29 @@ body {
   text-align: right;
 }
 
-.feedPosts .mu-card .mu-card-header {
+.searchSection .mu-card {
+  margin-left: 15px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  max-width: 500px;
+  display: inline-block;
+  font-family: IranSans-Light;
+  text-align: right;
+}
+
+.feedPosts .mu-card .mu-card-header,
+.searchSection .mu-card .mu-card-header {
   direction: rtl;
 }
 
-.feedPosts .mu-card .mu-card-header-title {
+.feedPosts .mu-card .mu-card-header-title,
+.searchSection .mu-card .mu-card-header-title {
   padding-right: 10px;
   padding-top: 7px;
 }
 
-.feedPosts {
+.feedPosts,
+.searchSection {
   overflow: auto;
   text-align: center;
   width: 100%;
@@ -229,5 +242,15 @@ body {
   margin: 0 auto;
   height: 100vh;
   direction: rtl;
+}
+
+.result > .mu-card {
+  display: inline-block;
+}
+
+@media screen and (max-width: 990px) {
+  .sidebar {
+    display: none;
+  }
 }
 
