--- a/public/css/app.css
+++ b/public/css/app.css
@@ -254,3 +254,40 @@ body {
   }
 }
 
+.profileHeader > .mu-card-header-title {
+  padding-top: 25px;
+  padding-right: 20px;
+}
+
+.profile > div > div:nth-child(2) {
+  padding-top: 20px;
+  padding-right: 32px;
+}
+
+.medias {
+  margin-top: 10px;
+  padding-right: 32px;
+}
+
+.upload > div > button,
+.upload > div > div,
+.upload > div > label,
+.upload > div > input {
+  text-align: center;
+  margin: 10px auto;
+}
+
+.upload {
+  width: 500px;
+  margin: 91px auto;
+}
+
+.upload .progressBar {
+  width: 100%;
+}
+
+.mainContainer {
+  height: 100vh;
+  overflow: auto;
+}
+
