--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -161,3 +161,33 @@ body {
         display: none;
     }
 }
+.profileHeader > .mu-card-header-title{
+    padding-top: 25px;
+    padding-right: 20px;
+}
+.profile > div > div:nth-child(2){
+    padding-top: 20px; 
+    padding-right: 32px;
+}
+.medias{
+    margin-top: 10px;
+    padding-right: 32px;
+}
+.upload > div > button,.upload > div > div,.upload > div > label,.upload > div > input{
+    text-align: center;
+    margin: 10px auto;
+}
+.upload{
+    width: 500px;
+    margin: 91px auto;
+}
+.upload .progressBar{
+    width: 100%;
+}
+.upload .mu-form-item__error{
+    //text-align: right;
+}
+.mainContainer{
+    height: 100vh;
+    overflow: auto;
+}
