Upload + Profile Pages Bug Fixing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -291,3 +291,13 @@ body {
   overflow: auto;
 }
 
+.medias > div > div {
+  width: 30.33%;
+  margin: 10px 1.5%;
+  float: right;
+}
+
+.border {
+  border: 1px solid gray;
+}
+
