--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -191,3 +191,11 @@ body {
     height: 100vh;
     overflow: auto;
 }
+.medias > div > div{
+    width: 30.33%;
+    margin: 10px 1.5%;
+    float: right;
+}
+.border { 
+    border: 1px solid gray;
+}
