is_liked Parameter is now available in apis

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -118,14 +118,10 @@ body {
   color: #0d47a1;
 }
 .feedPosts .mu-card{
-    margin-left: 15px;
-    margin-top: 20px;
-    width: 48%;
-    margin-bottom: 20px;
     max-width: 500px;
-    display: inline-block;
     font-family: IranSans-Light;
     text-align: right;
+    margin: 20px auto;
 }
 .searchSection .mu-card{
     margin-left: 15px;
