--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -113,17 +113,21 @@ body {
 .sidebar .mu-item {
     width: 220px;
     margin: 0px auto;
-} 
-.sidebar a.router-link-active .mu-item-title,.sidebar a.router-link-active .mu-item-action{
-  color: #0d47a1;
 }
-.feedPosts .mu-card{
+
+.sidebar a.router-link-active .mu-item-title,
+.sidebar a.router-link-active .mu-item-action {
+    color: #0d47a1;
+}
+
+.feedPosts .mu-card {
     max-width: 500px;
     font-family: IranSans-Light;
     text-align: right;
     margin: 20px auto;
 }
-.searchSection .mu-card{
+
+.searchSection .mu-card {
     margin-left: 15px;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -133,14 +137,19 @@ body {
     text-align: right;
 }
 
-.feedPosts .mu-card .mu-card-header, .searchSection .mu-card .mu-card-header{
+.feedPosts .mu-card .mu-card-header,
+.searchSection .mu-card .mu-card-header {
     direction: rtl;
 }
-.feedPosts .mu-card .mu-card-header-title, .searchSection .mu-card .mu-card-header-title{
+
+.feedPosts .mu-card .mu-card-header-title,
+.searchSection .mu-card .mu-card-header-title {
     padding-right: 10px;
     padding-top: 7px;
 }
-.feedPosts,.searchSection{
+
+.feedPosts,
+.searchSection {
     overflow: auto;
     text-align: center;
     width: 100%;
@@ -149,68 +158,104 @@ body {
     height: 100vh;
     direction: rtl;
 }
-.result > .mu-card {
+
+.result>.mu-card {
     display: inline-block;
 }
-@media screen and (max-width:990px){
-    .sidebar{
+
+.RespAppbar {
+    display: none;
+    height: 60px;
+    position: absolute;
+    bottom: 0;
+    min-width: 100vw;
+}
+
+@media screen and (max-width:990px) {
+    .sidebar {
         display: none;
     }
+
+    .RespAppbar {
+        display: block;
+    }
 }
-.profileHeader > .mu-card-header-title{
+
+.profileHeader>.mu-card-header-title {
     padding-top: 25px;
     padding-right: 20px;
 }
-.profile > div > div:nth-child(2){
-    padding-top: 20px; 
+
+.profile>div>div:nth-child(2) {
+    padding-top: 20px;
     padding-right: 32px;
 }
-.medias{
+
+.medias {
     margin-top: 10px;
     padding-right: 32px;
 }
-.upload > div > button,.upload > div > div,.upload > div > label,.upload > div > input{
+
+.upload>div>button,
+.upload>div>div,
+.upload>div>label,
+.upload>div>input {
     text-align: center;
     margin: 10px auto;
 }
-.upload{
+
+.upload {
     width: 500px;
     margin: 91px auto;
 }
-.upload .progressBar{
+
+.upload .progressBar {
     width: 100%;
 }
-.upload .mu-form-item__error{
+
+.upload .mu-form-item__error {
     //text-align: right;
 }
-.mainContainer{
+
+.mainContainer {
     height: 100vh;
     overflow: auto;
 }
-.medias > div > div{
+
+.medias>div>div {
     width: 30.33%;
     margin: 10px 1.5%;
     float: right;
 }
-.border { 
+
+.border {
     border: 1px solid gray;
 }
-.imgOrg , .imgOrg img{
+
+.imgOrg,
+.imgOrg img {
     width: 100%;
 }
-.medias img{
+
+.medias img {
     cursor: pointer;
 }
+
 .mu-button.showImageButton.mu-icon-button {
-    color: rgba(255,255,255,.8);
+    color: rgba(255, 255, 255, .8);
     position: absolute;
     left: 5px;
     top: 5px;
 }
-.right{
+
+.right {
     float: right;
 }
 
-.mu-form-item__success{
+.mu-form-item__success {
     color: #4caf50;
+}
+
+.inline-table {
+    display: inline-table;
 }
