--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -259,3 +259,14 @@ body {
 .inline-table {
     display: inline-table;
 }
+
+.followerLists {
+    font-family: "IranSans-Light";
+}
+
+.followerLists .mu-dialog-title,
+.followerLists .mu-item-title,
+.followerLists .notfound {
+    direction: rtl;
+    text-align: right;
+}
